[tool.poetry]
name = "humiocli"
version = "0.3.0"
description = "Command line interface for interacting with Humio API using the humiocore library"
authors = ["Jostein Haukeli"]
repository = "https://github.com/gwtwod/py3humiocli"
readme = "README.md"

packages = [
    { include = "humiocli" }
]

[tool.poetry.dependencies]
python = "^3.6"
tzlocal = "^1.5"
snaptime = "^0.2.4"
pendulum = "^2.0"
pytz = "^2018.9"
structlog = "^19.1"
pandas = "^0.24.1"
pygments = "^2.3"
click = "^7.0"
tabulate = "^0.8.3"
chardet = "^3.0"
humiocore = {git = "https://github.com/gwtwod/py3humiocore.git", rev = "a1f614c02b2b9494754e59e3bf89e60de74c2fe2"}

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
pylint = "^2.3"

[tool.poetry.scripts]
hc = "humiocli.cli:cli"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.black]
line-length = 98
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(/(
    \.eggs
  | \.git
  | \.venv
  | _?build
  | dist
)/
  | setup\.py
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
